# whisper-vtt

./: .gitignore  README.md  pyproject.toml  requirements.txt  whisper_vtt.py  whisper_vtt.sh
scripts/: download_model.py  test_audio3.py
