[project]
name = "vtt-tool"
version = "0.1.0"
description = "Hotkey-activated voice-to-text using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20240930",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "pyperclip>=1.9.0",
    "numpy>=2.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
